Реализовал список контактов и детали контакта (только верстка и навигация)

--- a/MyFirstApplication/app/src/main/res/values/strings.xml
+++ b/MyFirstApplication/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">MyFirstApplication</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="names">
+        <item>Никита</item>
+        <item>Сергей</item>
+    </string-array>
+    <string-array name="numbers">
+        <item>89991112233</item>
+        <item>89992223344</item>
+    </string-array>
+    <string-array name="mails">
+        <item>shtek7777@gmail.com</item>
+        <item>shtek97@mail.ru</item>
+    </string-array>
 </resources>
